[project]
name = "calorator-backend"
version = "0.1.0"
description = "A backend for the Calorator nutrition analysis app."
authors = [
    {name = "Viktor Rura",email = "ruravictor@gmail.com"}
]
license = {text = "MIT"}
package-mode = false
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.2"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
